# server/src/index.ts
@@ -12,6 +12,7 @@ import subjectRouter from './routes/subject';
 import studentRouter from './routes/student';
 import fileRouter from './routes/file';
 import worksheetRouter from './routes/worksheet';
+import enrolmentRouter from './routes/enrolment';
 
 export const app = express();
 
@@ -58,6 +59,7 @@ export async function setup(): Promise<string | null> {
   app.use('/student', studentRouter);
   app.use('/file', fileRouter);
   app.use('/worksheet', worksheetRouter);
+  app.use('/enrolment', enrolmentRouter);
   
   app.use((req, res, next) => {
     res.status(404).json({
